--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					耀奇
 				</div>
 				<div class="name">
-					<span style="font-size: 16px;">耀奇</span>
+					<span style="font-size: 16px;">胡耀奇</span>
 					<span style="font-size: 12px;color: #cac0c0fa;">审批已通过</span>
 				</div>
 				<div class="weui-cell__ft"></div>
